--- a/articles.html
+++ b/articles.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dipesh Acharya Associates</title>
+  <link rel="icon" type="image/x-icon" href="./image/circle-logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="./CSS/style.css">
   <script src="./JS/script.js" defer></script>
@@ -17,7 +18,7 @@
         <a href="index.html">HOME</a>
         <a href="about.html">ABOUT US</a>
         <a href="services.html">OUR SERVICES</a>
-        <a href="articles.html">ARTICLES</a>
+        <a href="articles.html">PUBLICATION</a>
         <a href="contact.html">CONTACT</a>
     </nav>
 
@@ -34,7 +35,7 @@
   <section class="abouthome" id="home">
     <div class="container">
       <div class="content">
-        <h3>Our Articles</h3>
+        <h3>Our Publication</h3>
       </div>
     </div>
       </section>
