--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dipesh Acharya Associates</title>
+  <link rel="icon" type="image/x-icon" href="./image/circle-logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="./CSS/style.css">
   <script src="./JS/script.js" defer></script>
@@ -17,7 +18,7 @@
       <a href="index.html">HOME</a>
         <a href="about.html">ABOUT US</a>
         <a href="services.html">OUR SERVICES</a>
-        <a href="articles.html">ARTICLES</a>
+        <a href="articles.html">PUBLICATION</a>
         <a href="contact.html">CONTACT</a>
     </nav>
 
@@ -55,7 +56,7 @@
               DAA is a strategic consulting, accounting, and audit firm offering a wide range of professional services to individuals, companies (from SMEs to major corporations), government institutions and its departments, and non-profit organizations. It operates by a team of competent and experienced chartered accountants.
 It offers a comprehensive range of expert services in the domain of taxation, advisory, and assurance. Along with to its highly skilled partners, the firm employs a group of competent staff members and consultants with specialization  <a href="about.html"class="viewmore">view more</a></p>
 <div class="social">
-  <a href="https://www.linkedin.com/in/dipesh-acharya-57b789141/"><img src="./Image/linked-in.png" alt="LinkedIn"></a>
+  <a href="https://www.linkedin.com/in/dipesh-acharya-57b789141/"><img src="./image/linked-in.png" alt="LinkedIn"></a>
 </div>
         </div>
     </div>
@@ -70,42 +71,42 @@ It offers a comprehensive range of expert services in the domain of taxation, ad
               <div class="card-wrapper">
                   <a href="services.html">
                     <div class="card">
-                      <img src="./Image/audit-assurance.png" alt="" width="200px">
+                      <img src="./image/audit-assurance.png" alt="" width="200px">
                       <h2>Audit and Assurance</h2>
                       <p></p>
                   </div>
                   </a>
                   <a href="services.html">
                     <div class="card">
-                      <img src="./Image/business-solution1.png" alt="" width="200px">
+                      <img src="./image/business-solution1.png" alt="" width="200px">
                       <h2>Business Consultant</h2>
                       <p></p>
                   </div>
                   </a>
                   <a href="services.html">
                     <div class="card">
-                      <img src="./Image/risk-management.jpg" alt="" width="200px">
+                      <img src="./image/risk-management.jpg" alt="" width="200px">
                       <h2>Public Finance Management</h2>
                       <p></p>
                   </div>
                   </a>
                   <a href="services.html">
                     <div class="card">
-                      <img src="./Image/nfrs1.jpg" alt="" width="200px">
+                      <img src="./image/nfrs1.jpg" alt="" width="200px">
                       <h2>Accounting & IFRS/NFRS</h2>
                       <p></p>
                   </div>
                   </a>
                   <a href="services.html">
                     <div class="card">
-                      <img src="./Image/corporate1.jpg" alt="" width="200px">
+                      <img src="./image/corporate1.jpg" alt="" width="200px">
                       <h2>Financial & Human Resources Planning</h2>
                       <p></p>
                   </div>
                   </a>
                   <a href="services.html">
                     <div class="card">
-                      <img src="./Image/tax1.png" alt="" width="200px">
+                      <img src="./image/tax1.png" alt="" width="200px">
                       <h2>Taxation</h2>
                       <p></p>
                   </div>
@@ -115,7 +116,7 @@ It offers a comprehensive range of expert services in the domain of taxation, ad
         </section>
         <section id="Articles" class="article">
           <div class="container">
-              <h1 class="section-heading">Articles</h1>
+              <h1 class="section-heading">Publication</h1>
               <p>These are some articles published by DAA</p>
               <div class="viewall">
                 <a href="articles.html">view all</a>
@@ -212,7 +213,7 @@ It offers a comprehensive range of expert services in the domain of taxation, ad
    <img src="./image/white-logo.png" alt="" >
    <p>Dipesh Acharya Associates Is A Leading Chartered Accountancy Firm Dedicated To Providing Comprehensive Audit Services To A Diverse Array Of Companies, Organizations, And Institutions.</p>
    <div class="social">
-    <a href="https://www.linkedin.com/in/dipesh-acharya-57b789141/"><img src="./Image/linked-in.png" alt="LinkedIn"></a>
+    <a href="https://www.linkedin.com/in/dipesh-acharya-57b789141/"><img src="./image/linked-in.png" alt="LinkedIn"></a>
 </div>
   
   </div>
