--- a/articles.html
+++ b/articles.html
@@ -153,7 +153,7 @@
    <img src="./image/white-logo.png" alt="" >
    <p>Dipesh Acharya Associates Is A Leading Chartered Accountancy Firm Dedicated To Providing Comprehensive Audit Services To A Diverse Array Of Companies, Organizations, And Institutions.</p>
    <div class="social">
-    <a href="https://www.linkedin.com/in/dipesh-acharya-57b789141/"><img src="./Image/linked-in.png" alt="LinkedIn"></a>
+    <a href="https://www.linkedin.com/in/dipesh-acharya-57b789141/"><img src="./image/linked-in.png" alt="LinkedIn"></a>
 </div>
   
   </div>
